--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -27,7 +27,7 @@
 	<repositories>
 		<repository>
 			<id>Conjars</id>
-			<url>http://conjars.org/repo</url>
+			<url>https://conjars.org/repo</url>
 		</repository>
 	</repositories>
 	
